[GTK] AX: Two layout tests crash with error 'g_strstr_len: assertion 'haystack != NULL' failed' in Accessibility::UIElement::url https://bugs.webkit.org/show_bug.cgi?id=176796

Reviewed by Chris Fleizach.

Tools:

Add sanity check that we have a URL before calling g_strstr_len().

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::url):

LayoutTests:

Remove failing tests from Test Expectations. Update expected results of
xml-roles-exposed to reflect several bug fixes which were made in the
interim. Modify add-children-pseudo-element.html to account for platform
differences in the accessibility tree. Add an additional URL test because
we didn't have coverage for getting the URL of accessible links resulting
from native anchor elements.

* accessibility/add-children-pseudo-element.html: Modified.
* accessibility/gtk/link-url-expected.txt: Added.
* accessibility/gtk/link-url.html: Added.
* accessibility/gtk/xml-roles-exposed-expected.txt: Updated.
* platform/gtk/TestExpectations: Removed failing tests.
* platform/gtk/accessibility/add-children-pseudo-element-expected.txt: Added.


Canonical link: https://commits.webkit.org/197636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227151 268f45cc-cd09-0410-ab3c-d52691b4dbfc